add rating ini script and update ratings

--- a/src/Data_Copy/Database_Copy_CDA.ipynb
+++ b/src/Data_Copy/Database_Copy_CDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "110f7930-0af1-492c-b74c-376f1cb45f86",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "import sys\n",
-    "#sys.path.insert(0, \"C:/Soft/repos/cwms-python\")\n",
+    "sys.path.insert(0, \"C:/Soft/repos/cwms-python\")\n",
     "import cwms\n",
     "import numpy as np"
    ]
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1295b43c-d073-4549-8e47-15fa6fc23afc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "apiRoot_src = \"https://wm.lrl.ds.usace.army.mil:8243/lrl-data/\""
+    "apiRoot_src = \"https://wm.mvp.ds.usace.army.mil:8243/mvp-data/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "44935f4a-4b8b-4a07-94fb-bd04d092cc34",
    "metadata": {},
    "outputs": [],
@@ -46,18 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f8bf8507-8bfe-4e83-a739-a6976c068e67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from getpass import getpass\n",
     "apiKey = getpass()\n",
@@ -66,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "647da2b3-d55e-4e32-a55f-52e86f2ec511",
    "metadata": {},
    "outputs": [],
    "source": [
-    "office = 'LRL'"
+    "office = 'MVP'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "16a34d19-dfeb-4088-a19d-62bb00a9611d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e8128b63-5d83-47ae-bf32-405d27da4949",
    "metadata": {},
    "outputs": [],
@@ -96,7 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "b79a0196-11bb-4763-a005-b7683ddcd774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = location.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6c5d4fff-c605-452f-96ee-0f43ecb9126c",
    "metadata": {},
    "outputs": [],
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "cc725358-7d99-4879-ba16-0ef9125b9fbb",
    "metadata": {},
    "outputs": [],
@@ -122,17 +124,17 @@
     "            loc_json = {\n",
     "              \"office-id\": row['office'],  # required\n",
     "              \"name\": row['name'],    #required\n",
-    "              \"latitude\": float(default_val(row['longitude'],'38.0')),  #required\n",
+    "              \"latitude\": float(default_val(row['latitude'],'38.0')),  #required\n",
     "              \"longitude\": float(default_val(row['longitude'],'-85.0')),  #required\n",
     "              \"active\": row['active'],  #required\n",
     "              \"public-name\": row['public-name'],\n",
     "              \"long-name\": row['long-name'],\n",
     "              \"description\": row['description'],\n",
-    "              \"timezone-name\": default_val(row['time-zone'],'US/Eastern'), #required\n",
+    "              \"timezone-name\": default_val(row['time-zone'],'US/CENTRAL'), #required\n",
     "              \"location-type\": row['type'], \n",
     "              \"location-kind\": row['kind'],  #required\n",
     "              \"nation\": 'US',   #required and abbreviated\n",
-    "              #\"state-initial\": row['state'],  Saving state doesn't work.\n",
+    "              #\"state-initial\": row['state'],  #Saving state doesn't work.\n",
     "              #\"county-name\": row['county'],\n",
     "              \"nearest-city\": row['nearest-city'],\n",
     "              \"horizontal-datum\": default_val(row['horizontal-datum'],'NAD27'),  #required\n",
@@ -146,10 +148,11 @@
     "            }\n",
     "            #clean_dict = filter(lambda k: not pd.isna(loc_json[k]), loc_json)\n",
     "            clean_dict = {k: loc_json[k] for k in loc_json if not pd.isna(loc_json[k])}\n",
-    "            print(clean_dict)\n",
+    "            #print(clean_dict)\n",
     "            try:\n",
     "                cwms.store_location(data = clean_dict)\n",
     "            except:\n",
+    "                print(clean_dict)\n",
     "                print('save failed')"
    ]
   },
@@ -167,24 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "f96eb8e6-96de-4551-ac9b-8c7a20f5f469",
    "metadata": {},
    "outputs": [],
    "source": [
     "location_dev = cwms.get_locations_catalog(office_id=office)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4bb8db2-2962-4589-8f5f-1cb00bb34ac6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "location_dev.df"
    ]
   },
   {
@@ -197,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9aa3f59e-5f05-4f24-bd65-3170cd781b44",
    "metadata": {},
    "outputs": [],
@@ -207,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0fdd77ef-7d91-49d8-b05a-20913e679c46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_indentifier = cwms.get_timeseries_identifiers(office_id=office,page_size=20000)"
+    "ts_indentifier = cwms.get_timeseries_identifiers(office_id=office,page_size=100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3331f335-f29c-4d1c-bf4a-78b54cecde4f",
    "metadata": {},
    "outputs": [],
@@ -227,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a1803ab9-ce10-4cf5-8cb8-ac06610c7a72",
    "metadata": {},
    "outputs": [],
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9cc72fbb-7089-46e7-aa42-679233b5fa0b",
    "metadata": {},
    "outputs": [],
@@ -249,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "835b9cc4-c421-4409-8a73-00a227b5e6f7",
    "metadata": {},
    "outputs": [],
@@ -260,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d9893089-f37a-4e5d-9653-208e20a391f9",
    "metadata": {
     "scrolled": true
@@ -277,7 +268,7 @@
     "      \"active\": row['active_x']\n",
     "    }\n",
     "    try:\n",
-    "        cwms.store_timeseries_identifier(data=t_id,fail_if_exists=True)\n",
+    "        cwms.store_timeseries_identifier(data=t_id,fail_if_exists=False)\n",
     "    except:\n",
     "        print(row['time-series-id'])\n",
     "    "
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7077ceae-3b8a-4d58-87e9-e8ed672156c3",
    "metadata": {},
    "outputs": [],
@@ -295,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2387a1f2-4b39-4f36-99b4-c10685dfce1a",
    "metadata": {},
    "outputs": [],
@@ -305,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "17803f01-cc66-4df6-9f83-addbc8cb1fc6",
    "metadata": {},
    "outputs": [],
@@ -319,7 +310,9 @@
    "id": "22fb1ef3-5543-4692-9e7f-2fc6d6ba32eb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ts_indentifier.df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "337cdc79-d2f5-42a3-82f1-0c4476467e87",
    "metadata": {},
    "outputs": [],
@@ -341,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "32bbed8f-22d3-47db-af79-1e0bd81621c4",
    "metadata": {},
    "outputs": [],
@@ -352,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "2ca26453-e3ca-4e55-ac9d-cb4b83e9c454",
    "metadata": {},
    "outputs": [],
@@ -362,7 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "id": "a3e64e16-0b41-40bd-847d-ff5a588882ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_groups.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0259cb16-a9bb-4936-b33f-ec27db1194b1",
    "metadata": {},
    "outputs": [],
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "9c301ba2-726b-4612-92ab-86586eb0d869",
    "metadata": {},
    "outputs": [],
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "49d953d7-1bb6-420d-a3c7-083a08e496bf",
    "metadata": {},
    "outputs": [],
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "d2bd66b6-05b2-4a8d-83e8-ff4c72b921b9",
    "metadata": {},
    "outputs": [],
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a90b2ec1-e334-48cf-a84c-1c40d10fd523",
    "metadata": {},
    "outputs": [],
@@ -440,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "b4829304-c0c7-4e97-a760-464998455963",
    "metadata": {},
    "outputs": [],
@@ -450,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "9d572a08-c9a0-481f-b575-58fa1f789172",
    "metadata": {},
    "outputs": [],
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2845b3a8-73a6-4a92-a7d3-ac37cdb09308",
    "metadata": {},
    "outputs": [],
@@ -502,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1713c49d-0d82-41ae-8450-a53f7b0fea21",
    "metadata": {},
    "outputs": [],
@@ -512,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8499870a-2407-4ba8-a124-cbd714a20b80",
    "metadata": {},
    "outputs": [],
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b8cf01ca-0ca8-4c1c-b4e9-b785bc0db033",
    "metadata": {},
    "outputs": [],
@@ -565,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c391f71c-34b4-4ea9-b90b-6dcb1e495fc8",
    "metadata": {},
    "outputs": [],
@@ -575,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2ef45e7d-3f53-4288-b79f-e4e4e20c458a",
    "metadata": {},
    "outputs": [],
@@ -589,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "f55fb2b3-2ac7-4f5f-bc4a-d4a689354ff7",
    "metadata": {},
    "outputs": [],
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "2a2b917b-49a7-41d2-89e2-c9634eff1d8c",
    "metadata": {},
    "outputs": [],
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "7a99b364-f431-4a19-9fef-33a27be31ac5",
    "metadata": {},
    "outputs": [],
@@ -647,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "7eb2af06-6115-40a2-b368-2d07c012df50",
    "metadata": {},
    "outputs": [],
@@ -665,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "dca88a21-40c8-421a-822d-7550ce76ac93",
    "metadata": {},
    "outputs": [],
@@ -694,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "22c3c3d3-5db1-4015-afcd-7520adfee8a4",
    "metadata": {},
    "outputs": [],
